syntax = "proto3";

package auth.v1;


service AuthService {
    rpc Login (LoginRequest) returns (AuthResponse);
    rpc Register (RegisterRequest) returns (AuthResponse);
    rpc RefreshToken (LoginRequest) returns (AuthResponse);
    rpc GoogleCallback (LoginRequest) returns (AuthResponse);
    rpc GithubCallback (LoginRequest) returns (AuthResponse);
    rpc VerifyRefreshToken (VerifyRefreshTokenRequest) returns (User);
    rpc VerifyUser (VerifyUserRequest) returns (User);
}

message LoginRequest {
    User user = 1;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}

message AuthResponse {
    string access_token = 1;
    string refresh_token = 2;
    string expires_access_token = 3;
    string expires_refresh_token = 4;
    optional bool redirect = 5;
    optional string redirect_url = 6;
}

message User {
    int32 id = 1;
    string email = 2;
    optional string name = 3;
    optional string password = 4;
    optional string refresh_token = 5;
    optional string created_at = 6;
    optional string updated_at = 7;
}

message TokenPayload {
    string user_id = 1;
    string email = 2;
}

message VerifyRefreshTokenRequest {
    string refresh_token = 1;
    string email = 2;
}

message VerifyUserRequest {
    string email = 1;
    string password = 2;
}

message Empty {}